--- a/exercises-final/exercise-01/index.css
+++ b/exercises-final/exercise-01/index.css
@@ -1,11 +1,27 @@
-/* Normalize box model */
 html {
-   box-sizing: border-box;
+  box-sizing: border-box;
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-body {
-    font-family: sans-serif;
+.parent {
+  float: left;
+  width: 50%;
+  border: 2px solid lightblue;
+}
+
+.full-width {
+  padding: 20%;
+  width: 100%;
+  border: 5px solid cornflowerblue;
+}
+
+.half-width {
+  float: left;
+  padding: 1em;
+  width: 50%;
+  border: 3px dotted darkgreen;
 }
