--- a/exercises/exercise-01/index.css
+++ b/exercises/exercise-01/index.css
@@ -1,3 +1,20 @@
-/* Normalize box model */
-
 /* Add your CSS here */
+
+.parent {
+  float: left;
+  width: 50%;
+  border: 2px solid lightblue;
+}
+
+.full-width {
+  padding: 20%;
+  width: 100%;
+  border: 5px solid cornflowerblue;
+}
+
+.half-width {
+  float: left;
+  padding: 1em;
+  width: 50%;
+  border: 3px dotted darkgreen;
+}
