Update box-sizing exercise

--- a/exercises-final/exercise-01/index.css
+++ b/exercises-final/exercise-01/index.css
@@ -1,16 +1,13 @@
-html {
-  box-sizing: border-box;
-}
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 .parent {
   float: left;
   width: 50%;
-  border: 2px solid lightblue;
+  border: 5px solid lightblue;
 }
 
 .full-width {
@@ -19,9 +16,29 @@ html {
   border: 5px solid cornflowerblue;
 }
 
+.child {
+  padding: 20px;
+  width: 100%;
+  border: 5px solid #000;
+}
+
+.child::before,
+.child::after {
+  display: block;
+  padding: 10px;
+  width: 100%;
+  border: 5px solid deepskyblue;
+}
+.child::before {
+  content: "::before";
+}
+.child::after {
+  content: "::after";
+}
+
 .half-width {
   float: left;
   padding: 1em;
   width: 50%;
-  border: 3px dotted darkgreen;
+  border: 5px dashed darkslateblue;
 }
