--- a/exercises/exercise-01/index.css
+++ b/exercises/exercise-01/index.css
@@ -3,7 +3,7 @@
 .parent {
   float: left;
   width: 50%;
-  border: 2px solid lightblue;
+  border: 5px solid lightblue;
 }
 
 .full-width {
@@ -12,9 +12,29 @@
   border: 5px solid cornflowerblue;
 }
 
+.child {
+  padding: 20px;
+  width: 100%;
+  border: 5px solid #000;
+}
+
+.child::before,
+.child::after {
+  display: block;
+  padding: 10px;
+  width: 100%;
+  border: 5px solid deepskyblue;
+}
+.child::before {
+  content: "::before";
+}
+.child::after {
+  content: "::after";
+}
+
 .half-width {
   float: left;
   padding: 1em;
   width: 50%;
-  border: 3px dotted darkgreen;
+  border: 5px dashed darkslateblue;
 }
